# FrameForge-Linux

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
src/: App.css  App.tsx  Foundry.tsx  ItemMarketPopup.tsx  MarketHelper.tsx  Overlay.css  Overlay.tsx  RelicHelper.tsx  Reports.tsx  Statistics.css  Statistics.tsx  Syndicates.tsx  WfmTrading.tsx  rewardData.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  log_parser.rs  main.rs  memory_scanner.rs  ocr.rs  overlay_linux.rs  wfcd.rs
