[package]
name = "warframe-companion"
version = "1.11.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "warframe_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["rt", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
aho-corasick = "1"
ureq = { version = "2", features = ["json"] }
tungstenite = { version = "0.26", features = ["native-tls"] }
native-tls = "0.2"
whirlpool = "0.10"
lzma-rs = "0.3"
png = "0.17"

[profile.dev]
opt-level = 1

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_Security_Credentials",
    "Win32_Storage_FileSystem",
] }
windows = { version = "0.58", features = [
    "Media_Ocr",
    "Graphics_Imaging",
    "Storage_Streams",
    "Foundation_Collections",
    "Globalization",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
] }
